# src/main/java/ca/datamagic/wfo/controller/IndexController.java
@@ -12,31 +12,21 @@ import java.util.ArrayList;
 import java.util.Enumeration;
 import java.util.List;
 
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-
 import org.apache.commons.io.IOUtils;
 import org.apache.log4j.LogManager;
 import org.apache.log4j.Logger;
 import org.springframework.core.io.DefaultResourceLoader;
 import org.springframework.core.io.Resource;
 import org.springframework.stereotype.Controller;
-import org.springframework.ui.Model;
-import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.ResponseBody;
 
-import com.google.inject.Guice;
-import com.google.inject.Injector;
-
 import ca.datamagic.wfo.dao.BaseDAO;
-import ca.datamagic.wfo.dao.WFODAO;
 import ca.datamagic.wfo.dto.CachedItemDTO;
 import ca.datamagic.wfo.dto.SwaggerConfigurationDTO;
 import ca.datamagic.wfo.dto.SwaggerResourceDTO;
 import ca.datamagic.wfo.dto.WFODTO;
-import ca.datamagic.wfo.inject.DAOModule;
 import ca.datamagic.wfo.inject.MemoryCacheInterceptor;
 
 /**
@@ -47,8 +37,6 @@ import ca.datamagic.wfo.inject.MemoryCacheInterceptor;
 @RequestMapping("")
 public class IndexController {
 	private static Logger _logger = LogManager.getLogger(IndexController.class);
-	private static Injector _injector = null;
-	private static WFODAO _dao = null;
 	private static SwaggerConfigurationDTO _swaggerConfiguration = null;
 	private static SwaggerResourceDTO[] _swaggerResources = null;
 	private static String _swagger = null;
@@ -69,8 +57,6 @@ public class IndexController {
 		    _swagger = IOUtils.toString(swaggerStream, "UTF-8");
 		    
 		    BaseDAO.setDataPath(dataPath);
-			_injector = Guice.createInjector(new DAOModule());
-			_dao = _injector.getInstance(WFODAO.class);
 			_swaggerConfiguration = new SwaggerConfigurationDTO();
 			_swaggerResources = new SwaggerResourceDTO[] { new SwaggerResourceDTO() };
 		} catch (Throwable t) {
@@ -81,38 +67,7 @@ public class IndexController {
 		}
 	}
 	
-	@RequestMapping(method=RequestMethod.GET, value="/api/list", produces="application/json")
-	@ResponseBody
-    public List<WFODTO> list(Model model, HttpServletRequest request, HttpServletResponse response) throws Exception {
-		try {
-			return _dao.list();
-		} catch (Throwable t) {
-			_logger.error("Exception", t);
-			throw new Exception(t);
-		}
-	}
 	
-	@RequestMapping(method=RequestMethod.GET, value="/api/{id}", produces="application/json")
-	@ResponseBody
-    public WFODTO readById(@PathVariable String id, Model model, HttpServletRequest request, HttpServletResponse response) throws Exception {
-		try {
-			return _dao.read(id);
-		} catch (Throwable t) {
-			_logger.error("Exception", t);
-			throw new Exception(t);
-		}
-	}
-	
-	@RequestMapping(method=RequestMethod.GET, value="/api/{latitude}/{longitude}/coordinates", produces="application/json")
-	@ResponseBody
-    public List<WFODTO> readByLocation(@PathVariable String latitude, @PathVariable String longitude, Model model, HttpServletRequest request, HttpServletResponse response) throws Exception {
-		try {
-			return _dao.read(Double.parseDouble(latitude), Double.parseDouble(longitude));
-		} catch (Throwable t) {
-			_logger.error("Exception", t);
-			throw new Exception(t);
-		}
-	}
 	
 	@RequestMapping(method=RequestMethod.GET, value="/cache", produces="application/json")
 	@ResponseBody
